# django-playground

./: .gitignore  README.md  docker-compose.yml  manage.py  mise.toml  pyproject.toml
playground/: asgi.py  settings.py  urls.py  wsgi.py
playground/items/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
playground/items/migrations/: 0001_initial.py
playground/proxy/: apps.py  models.py  tests.py  views.py
playground/proxy/migrations/: 0001_initial.py
tools/: locustfile.py
